monitoring/efk/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: efk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: efk
spec:
  ingressClassName: nginx # Ingress Controller 이름 확인
  rules:
    - host: www.kibana.cruming.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
    - host: kibana.cruming.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
